# Rook

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  test_output.txt
backend/contrib/: ipc_client.rs  skill_executor.rs  skill_loader.rs
backend/gnn/: README.md  requirements.txt  train_graphsage.py
backend/src/: error_log.rs  main.rs
backend/src/computer_use/: actions.rs  context.rs  mod.rs  uia.rs
backend/src/indexer/: browser_indexer.rs  file_indexer.rs  mod.rs  task_tracker.rs  ui_indexer.rs
backend/src/ipc/: guards.rs  mod.rs  protocol.rs  server.rs
backend/src/ipc/handlers/: admin.rs  chat.rs  conversations.rs  git.rs  memory.rs  mod.rs  plugins.rs  scheduler.rs  tool_dispatch.rs  tools.rs
backend/src/llm/: cheap_model.rs  client.rs  mod.rs  orchestrator.rs  types.rs
backend/src/memory/: context.rs  distiller.rs  embedding.rs  extractor.rs  feedback.rs  gnn.rs  graph.rs  local_embed.rs  mod.rs  object.rs  sliding_window.rs  storage.rs
backend/src/os/: mod.rs
backend/src/plugins/: github.rs  installer.rs  mcp_runner.rs  mod.rs  registry.rs
backend/src/scheduler/: cadence.rs  channels.rs  loop.rs  mod.rs  store.rs
backend/src/skills/: mod.rs  registry.rs
backend/src/tools/: browser_automation.rs  browser_cdp.rs  browser_tool.rs  code_edit.rs  file_read.rs  file_write.rs  git.rs  lsp.rs  mod.rs  shell_manager.rs  terminal.rs  web_search.rs
backend/tests/: integration_test.rs
docs/: ui-design.md
frontend/: package-lock.json  package.json
frontend/scripts/: build-backend.js  installer-hooks.nsh  verify-backend.js
frontend/src/: backend-manager.js  main.js  preload.js
frontend/src/renderer/: app.js  index.html  style.css
frontend/src/renderer/modules/: plugins.js  util.js
